presupuesto variantes y hiper vinculo

--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -247,6 +247,8 @@
                                                         </td>
                                                         <td name="th_description" style="text-align: justify !important ;">
                                                            <t t-set="contador" t-value="0"/>
+                                                            <t t-set="variables" t-value="''"/>
+                                                            <t t-if="line.product_id.product_template_attribute_value_ids != False">
                                                                     <t t-set="variables" t-value="'('"/>
                                                                     <t t-foreach="line.product_id.product_template_attribute_value_ids" t-as="va">
                                                                          <t t-if="contador > 0">
@@ -258,8 +260,8 @@
                                                                     </t>
                                                                     <t t-set="variables" t-value="variables + ')'"/>
                                                                     <t t-set="contador" t-value="0"/>
-
-                                                             <a href="https://airovac-airovactest-1135560.dev.odoo.com">
+                                                            </t>
+                                                             <a href="line.product_template_id.e_link_full">
                                                                  <strong>
                                                                      <span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;">
                                                                         <t t-esc ="line.product_template_id.default_code" />  <t t-esc="variables" />
@@ -338,6 +340,8 @@
                                                         </td>
                                                         <td name="th_description" style="text-align: justify !important ;">
                                                               <t t-set="contador" t-value="0"/>
+                                                               <t t-set="variables" t-value="''"/>
+                                                            <t t-if="line.product_id.product_template_attribute_value_ids != False">
                                                                     <t t-set="variables" t-value="'('"/>
                                                                     <t t-foreach="line.product_id.product_template_attribute_value_ids" t-as="va">
                                                                          <t t-if="contador > 0">
@@ -349,10 +353,14 @@
                                                                     </t>
                                                                     <t t-set="variables" t-value="variables + ')'"/>
                                                                     <t t-set="contador" t-value="0"/>
-
-                                                             <a href="https://airovac-airovactest-1135560.dev.odoo.com"><strong><span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;">
-                                                               <t t-esc ="line.product_template_id.default_code" ></t>  <t t-esc="variables" />
-                                                             </span></strong></a>
+                                                            </t>
+                                                             <a href="line.product_template_id.e_link_full">
+                                                                 <strong>
+                                                                     <span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;">
+                                                                        <t t-esc ="line.product_template_id.default_code" ></t>  <t t-esc="variables" />
+                                                                    </span>
+                                                                 </strong>
+                                                             </a>
                                                                 <br/>
                                                             <p style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt;!important; line-height: 94% !important;">
 
