--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -249,16 +249,20 @@
                                                            <t t-set="contador" t-value="0"/>
                                                             <t t-set="variables" t-value="''"/>
                                                             <t t-if="line.product_id.product_template_attribute_value_ids != False">
-                                                                    <t t-set="variables" t-value="'('"/>
                                                                     <t t-foreach="line.product_id.product_template_attribute_value_ids" t-as="va">
-                                                                         <t t-if="contador > 0">
+                                                                         <t t-if="contador > 0 and va.name != False">
                                                                                  <t t-set="variables" t-value="variables + ' , ' + va.name"/>
+                                                                                <t t-set="contador" t-value="contador + 1"/>
                                                                          </t>
-                                                                        <t t-if="contador == 0">
-                                                                                 <t t-set="variables" t-value="variables + ' , ' + va.name"/>
+
+                                                                        <t t-if="contador == 0 and va.name != False">
+                                                                                 <t t-set="variables" t-value="va.name"/>
+                                                                                <t t-set="contador" t-value="contador + 1"/>
                                                                          </t>
                                                                     </t>
-                                                                    <t t-set="variables" t-value="variables + ')'"/>
+                                                                    <t t-if="contador > 0">
+                                                                               <t t-set="variables" t-value="'( ' + variables + ' )'"/>
+                                                                    </t>
                                                                     <t t-set="contador" t-value="0"/>
                                                             </t>
                                                              <a href="line.product_template_id.e_link_full">
@@ -342,18 +346,23 @@
                                                               <t t-set="contador" t-value="0"/>
                                                                <t t-set="variables" t-value="''"/>
                                                             <t t-if="line.product_id.product_template_attribute_value_ids != False">
-                                                                    <t t-set="variables" t-value="'('"/>
                                                                     <t t-foreach="line.product_id.product_template_attribute_value_ids" t-as="va">
-                                                                         <t t-if="contador > 0">
+                                                                        <t t-if="contador > 0 and va.name != False">
                                                                                  <t t-set="variables" t-value="variables + ' , ' + va.name"/>
+                                                                                <t t-set="contador" t-value="contador + 1"/>
                                                                          </t>
-                                                                        <t t-if="contador == 0">
-                                                                                 <t t-set="variables" t-value="variables + ' , ' + va.name"/>
+                                                                        <t t-if="contador == 0 and va.name != False">
+                                                                                 <t t-set="variables" t-value="va.name"/>
+                                                                                <t t-set="contador" t-value="contador + 1"/>
                                                                          </t>
                                                                     </t>
-                                                                    <t t-set="variables" t-value="variables + ')'"/>
+                                                                    <t t-if="contador > 0">
+                                                                               <t t-set="variables" t-value="'( ' + variables + ' )'"/>
+                                                                    </t>
                                                                     <t t-set="contador" t-value="0"/>
                                                             </t>
+
+
                                                              <a href="line.product_template_id.e_link_full">
                                                                  <strong>
                                                                      <span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;">
