--- a/presupuesto_airovac/views/sale_portal_templates_inherit.xml
+++ b/presupuesto_airovac/views/sale_portal_templates_inherit.xml
@@ -96,13 +96,37 @@
 
                                         </td>
                                         <td name="th_description" style="text-align: justify !important ;">
-                                            <a href="https://airovac-airovactest-1135560.dev.odoo.com"><strong><span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;" t-field="line.product_template_id.default_code"></span></strong></a>
+
+                                            <t t-set="contador" t-value="0"/>
+                                            <t t-set="variables" t-value="''"/>
+                                            <t t-if="line.product_id.product_template_attribute_value_ids != False">
+                                                <t t-foreach="line.product_id.product_template_attribute_value_ids"
+                                                   t-as="va">
+                                                    <t t-if="contador > 0 and va.name != False">
+                                                        <t t-set="variables" t-value="variables + ' , ' + va.name"/>
+                                                        <t t-set="contador" t-value="contador + 1"/>
+                                                    </t>
+                                                    <t t-if="contador == 0 and va.name != False">
+                                                        <t t-set="variables" t-value="va.name"/>
+                                                        <t t-set="contador" t-value="contador + 1"/>
+                                                    </t>
+                                                </t>
+                                                <t t-if="contador > 0">
+                                                    <t t-set="variables" t-value="'( ' + variables + ' )'"/>
+                                                </t>
+                                                <t t-set="contador" t-value="0"/>
+                                            </t>
+
+                                             <a t-attf-href="line.product_template_id.e_link_full">
+                                                 <strong>
+                                                     <span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;">
+                                                        <t t-esc ="line.product_template_id.default_code" />  <t t-esc="variables" />
+                                                    </span>
+                                                 </strong>
+                                             </a>
                                             <br/>
                                             <p style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt;!important; line-height: 94% !important;">
                                                 <t t-if = "line.product_template_id.description_sale != False" >
-                                                    <t t-foreach="line.product_id.product_template_attribute_value_ids" t-as="va">
-                                                        <t t-esc ="va.name" ></t>
-                                                    </t>
                                                     <t t-esc ="line.product_template_id.description_sale" />
                                                 </t>
                                                 <t t-if = "line.product_template_id.description_sale == False" >
@@ -170,14 +194,36 @@
 
                                         </td>
                                         <td name="th_description" style="text-align: justify !important ;">
-                                            <a href="https://airovac-airovactest-1135560.dev.odoo.com"><strong><span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;" t-field="line.product_template_id.default_code"></span></strong></a>
+                                             <t t-set="contador" t-value="0"/>
+                                            <t t-set="variables" t-value="''"/>
+                                            <t t-if="line.product_id.product_template_attribute_value_ids != False">
+                                                <t t-foreach="line.product_id.product_template_attribute_value_ids"
+                                                   t-as="va">
+                                                    <t t-if="contador > 0 and va.name != False">
+                                                        <t t-set="variables" t-value="variables + ' , ' + va.name"/>
+                                                        <t t-set="contador" t-value="contador + 1"/>
+                                                    </t>
+                                                    <t t-if="contador == 0 and va.name != False">
+                                                        <t t-set="variables" t-value="va.name"/>
+                                                        <t t-set="contador" t-value="contador + 1"/>
+                                                    </t>
+                                                </t>
+                                                <t t-if="contador > 0">
+                                                    <t t-set="variables" t-value="'( ' + variables + ' )'"/>
+                                                </t>
+                                                <t t-set="contador" t-value="0"/>
+                                            </t>
+
+                                             <a t-attf-href="line.product_template_id.e_link_full">
+                                                 <strong>
+                                                     <span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;">
+                                                        <t t-esc ="line.product_template_id.default_code" />  <t t-esc="variables" />
+                                                    </span>
+                                                 </strong>
+                                             </a>
                                             <br/>
                                             <p style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt;!important; line-height: 94% !important;">
-
                                                 <t t-if = "line.product_template_id.description_sale != False" >
-                                                    <t t-foreach="line.product_id.product_template_attribute_value_ids" t-as="va">
-                                                        <t t-esc ="va.name" ></t>
-                                                    </t>
                                                     <t t-esc ="line.product_template_id.description_sale" />
                                                 </t>
                                                 <t t-if = "line.product_template_id.description_sale == False" >
