--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -245,40 +245,45 @@
                                                             </div>
 
                                                         </td>
-                                                        <td name="th_description" style="text-align: justify !important ;">
-                                                           <t t-set="contador" t-value="0"/>
+                                                        <td name="th_description"
+                                                            style="text-align: justify !important ;">
+                                                            <t t-set="contador" t-value="0"/>
                                                             <t t-set="variables" t-value="''"/>
                                                             <t t-if="line.product_id.product_template_attribute_value_ids != False">
-                                                                    <t t-foreach="line.product_id.product_template_attribute_value_ids" t-as="va">
-                                                                         <t t-if="contador > 0 and va.name != False">
-                                                                                 <t t-set="variables" t-value="variables + ' , ' + va.name"/>
-                                                                                <t t-set="contador" t-value="contador + 1"/>
-                                                                         </t>
+                                                                <t t-foreach="line.product_id.product_template_attribute_value_ids"
+                                                                   t-as="va">
+                                                                    <t t-if="contador > 0 and va.name != False">
+                                                                        <t t-set="variables"
+                                                                           t-value="variables + ' , ' + va.name"/>
+                                                                        <t t-set="contador" t-value="contador + 1"/>
+                                                                    </t>
 
-                                                                        <t t-if="contador == 0 and va.name != False">
-                                                                                 <t t-set="variables" t-value="va.name"/>
-                                                                                <t t-set="contador" t-value="contador + 1"/>
-                                                                         </t>
+                                                                    <t t-if="contador == 0 and va.name != False">
+                                                                        <t t-set="variables" t-value="va.name"/>
+                                                                        <t t-set="contador" t-value="contador + 1"/>
                                                                     </t>
-                                                                    <t t-if="contador > 0">
-                                                                               <t t-set="variables" t-value="'( ' + variables + ' )'"/>
-                                                                    </t>
-                                                                    <t t-set="contador" t-value="0"/>
+                                                                </t>
+                                                                <t t-if="contador > 0">
+                                                                    <t t-set="variables"
+                                                                       t-value="'( ' + variables + ' )'"/>
+                                                                </t>
+                                                                <t t-set="contador" t-value="0"/>
                                                             </t>
-                                                             <a href="line.product_template_id.e_link_full">
-                                                                 <strong>
-                                                                     <span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;">
-                                                                        <t t-esc ="line.product_template_id.default_code" />  <t t-esc="variables" />
-                                                                     </span>
-                                                                 </strong>
-                                                             </a>
+                                                            <a t-attf-href="line.product_template_id.e_link_full">
+                                                                <strong>
+                                                                    <span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;">
+                                                                        <t t-esc="line.product_template_id.default_code"/>
+                                                                        <t t-esc="variables"/>
+                                                                    </span>
+                                                                </strong>
+                                                            </a>
                                                             <br/>
                                                             <p style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt;!important; line-height: 94% !important;">
-                                                                <t t-if = "line.product_template_id.description_sale != False" >
-                                                                    <t t-esc ="line.product_template_id.description_sale" />
+                                                                <t t-if="line.product_template_id.description_sale != False">
+                                                                    <t t-esc="line.product_template_id.description_sale"/>
                                                                 </t>
-                                                                <t t-if = "line.product_template_id.description_sale == False" >
-                                                                    <t t-esc ="line.name" />
+                                                                <t t-if="line.product_template_id.description_sale == False">
+                                                                    <t t-esc="line.name"/>
                                                                 </t>
                                                             </p>
                                                         </td>
@@ -342,47 +347,46 @@
                                                             </div>
 
                                                         </td>
-                                                        <td name="th_description" style="text-align: justify !important ;">
-                                                              <t t-set="contador" t-value="0"/>
-                                                               <t t-set="variables" t-value="''"/>
+                                                        <td name="th_description"
+                                                            style="text-align: justify !important ;">
+                                                            <t t-set="contador" t-value="0"/>
+                                                            <t t-set="variables" t-value="''"/>
                                                             <t t-if="line.product_id.product_template_attribute_value_ids != False">
-                                                                    <t t-foreach="line.product_id.product_template_attribute_value_ids" t-as="va">
-                                                                        <t t-if="contador > 0 and va.name != False">
-                                                                                 <t t-set="variables" t-value="variables + ' , ' + va.name"/>
-                                                                                <t t-set="contador" t-value="contador + 1"/>
-                                                                         </t>
-                                                                        <t t-if="contador == 0 and va.name != False">
-                                                                                 <t t-set="variables" t-value="va.name"/>
-                                                                                <t t-set="contador" t-value="contador + 1"/>
-                                                                         </t>
+                                                                <t t-foreach="line.product_id.product_template_attribute_value_ids"
+                                                                   t-as="va">
+                                                                    <t t-if="contador > 0 and va.name != False">
+                                                                        <t t-set="variables"
+                                                                           t-value="variables + ' , ' + va.name"/>
+                                                                        <t t-set="contador" t-value="contador + 1"/>
                                                                     </t>
-                                                                    <t t-if="contador > 0">
-                                                                               <t t-set="variables" t-value="'( ' + variables + ' )'"/>
+                                                                    <t t-if="contador == 0 and va.name != False">
+                                                                        <t t-set="variables" t-value="va.name"/>
+                                                                        <t t-set="contador" t-value="contador + 1"/>
                                                                     </t>
-                                                                    <t t-set="contador" t-value="0"/>
+                                                                </t>
+                                                                <t t-if="contador > 0">
+                                                                    <t t-set="variables"
+                                                                       t-value="'( ' + variables + ' )'"/>
+                                                                </t>
+                                                                <t t-set="contador" t-value="0"/>
                                                             </t>
 
 
-                                                             <a href="line.product_template_id.e_link_full">
-                                                                 <strong>
-                                                                     <span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;">
-                                                                        <t t-esc ="line.product_template_id.default_code" ></t>  <t t-esc="variables" />
+                                                            <a t-attf-href="line.product_template_id.e_link_full">
+                                                                <strong>
+                                                                    <span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;">
+                                                                        <t t-esc="line.product_template_id.default_code"></t>
+                                                                        <t t-esc="variables"/>
                                                                     </span>
-                                                                 </strong>
-                                                             </a>
-                                                                <br/>
+                                                                </strong>
+                                                            </a>
+                                                            <br/>
                                                             <p style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt;!important; line-height: 94% !important;">
-
-
-                                                                <t t-if = "line.product_template_id.description_sale != False" >
-                                                                    <t t-foreach="line.product_id.product_template_attribute_value_ids" t-as="va">
-                                                                        <t t-esc ="va.name" ></t>
-
-                                                                    </t>
-                                                                    <t t-esc ="line.product_template_id.description_sale" />
+                                                                <t t-if="line.product_template_id.description_sale != False">
+                                                                    <t t-esc="line.product_template_id.description_sale"/>
                                                                 </t>
-                                                                <t t-if = "line.product_template_id.description_sale == False" >
-                                                                    <t t-esc ="line.name" />
+                                                                <t t-if="line.product_template_id.description_sale == False">
+                                                                    <t t-esc="line.name"/>
                                                                 </t>
                                                             </p>
                                                         </td>
