--- a/efecto_custom_factura_mx/views/num_pedimeto_invoice.xml
+++ b/efecto_custom_factura_mx/views/num_pedimeto_invoice.xml
@@ -2,6 +2,9 @@
 
 <odoo>
 
+
+
+
     <template id="remube_num_pedimento_mx" inherit_id="l10n_mx_edi.report_invoice_document_mx">
         <xpath expr="//table[@name='invoice_line_table']/tbody//tr[1]//td[1]//t[1]" position="replace" >
 
@@ -25,8 +28,13 @@
         </xpath>
         <xpath expr="//p[@name='comment']" position="replace" >
             <p t-if="o.narration" name="comment" style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt;!important text-align: justify !important ;" >
-                        <t t-raw ="o.narration"/>
+<!--                        <t t-raw ="o.narration"/>-->
             </p>
+        </xpath>
+
+        <xpath expr="//div[1]" position="replace">
+            <p> hola bebe </p>
+
         </xpath>
     </template>
 
