--- a/efecto_custom_factura_mx/views/num_pedimeto_invoice.xml
+++ b/efecto_custom_factura_mx/views/num_pedimeto_invoice.xml
@@ -32,9 +32,8 @@
             </p>
         </xpath>
 
-        <xpath expr="//div[1]" position="replace">
-            <p> hola bebe </p>
-
+        <xpath expr="//div[@t-if='o.partner_id.vat']" position="before">
+            <p>CDFDI</p>
         </xpath>
     </template>
 
