quitando espacio CDFI

--- a/efecto_custom_factura_mx/views/num_pedimeto_invoice.xml
+++ b/efecto_custom_factura_mx/views/num_pedimeto_invoice.xml
@@ -35,6 +35,12 @@
         <xpath expr="//div[@t-if='o.partner_id.vat']" position="before">
             <p>CDFDI</p>
         </xpath>
+
+        <xpath expr="//div[@t-if='o.partner_id.vat']" position="replace">
+            <div t-if="o.partner_id.vat" class="mt1">
+                        <t t-if="o.company_id.country_id.vat_label" t-esc="o.company_id.country_id.vat_label" id="inv_tax_id_label"/>
+                        <t t-else="">Tax ID</t>: <span t-field="o.partner_id.vat"/></div>
+        </xpath>
     </template>
 
 
