--- a/efecto_custom_factura_mx/views/num_pedimeto_invoice.xml
+++ b/efecto_custom_factura_mx/views/num_pedimeto_invoice.xml
@@ -33,7 +33,12 @@
         </xpath>
 
         <xpath expr="//div[@t-if='o.partner_id.vat']" position="before">
-            <p>CDFDI</p>
+            <t t-if="'RINV' not in o.l10n_mx_edi_cfdi_name and 'INV' in o.l10n_mx_edi_cfdi_name">
+                <span>INGRESO</span>
+            </t>
+            <t t-if="'RINV' in o.l10n_mx_edi_cfdi_name">
+                <span>EGRESO</span>
+            </t>
         </xpath>
 
         <xpath expr="//div[@t-if='o.partner_id.vat']" position="replace">
