--- a/efecto_custom_factura_mx/views/num_pedimeto_invoice.xml
+++ b/efecto_custom_factura_mx/views/num_pedimeto_invoice.xml
@@ -51,8 +51,17 @@
 
         <xpath expr="//div[@id='informations']" position="after">
             <t t-if="o.l10n_mx_edi_origin != False">
-                <p>CFDI Origen: <t t-esc="o.l10n_mx_edi_origin" /> </p>
+                <p><span class="text-muted">CFDI Origen:</span> <t t-esc="o.l10n_mx_edi_origin" /> </p>
             </t>
+        </xpath>
+    </template>
+
+    <template id="report_purchaseorder_add_currency" inherit_id="purchase.report_purchaseorder_document">
+        <xpath expr="//div[@id='informations']" position="inside">
+            <div  class="col-3 bm-2">
+                <strong>Moneda:</strong>
+                    <p t-field="o.currency_id.name" class="m-0"/>
+            </div>
         </xpath>
     </template>
 
