--- a/efecto_custom_factura_mx/views/efecto_compra_direccion_envio.xml
+++ b/efecto_custom_factura_mx/views/efecto_compra_direccion_envio.xml
@@ -2,11 +2,13 @@
 
 <odoo>
     <template id="efecto_compra_direccion_envio" inherit_id="purchase_stock.report_purchaseorder_document">
-        <xpath expr="//div[@t-set='information_block']" position="replace" >
+        <xpath expr="//t[@t-set='information_block']" position="replace" >
+             <t t-set="information_block">
                <strong>Shipping address:</strong>
                     <div>
                          <p t-field="o.notes"/>
                     </div>
+             </t>
         </xpath>
     </template>
 
