--- a/efecto_custom_factura_mx/views/efecto_compra_direccion_envio.xml
+++ b/efecto_custom_factura_mx/views/efecto_compra_direccion_envio.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <odoo>
-    <template id="efecto_compra_direccion_envio" inherit_id="purchase_stock.report_purchaseorder_document">
+    <template id="efecto_compra_direccion_envio" inherit_id="purchase.report_purchaseorder_document">
         <xpath expr="//t[@t-set='information_block']" position="replace" >
              <t t-set="information_block">
                <strong>Shipping address:</strong>
