--- a/efecto_custom_factura_mx/views/efecto_compra_direccion_envio.xml
+++ b/efecto_custom_factura_mx/views/efecto_compra_direccion_envio.xml
@@ -14,6 +14,19 @@
         </xpath>
     </template>
 
+    <template id="efecto_compra_direccion_envio_stock" inherit_id="purchase_stock.report_purchaseorder_document">
+        <xpath expr="//t[@t-else='']" position="replace" >
+           <t t-else="">
+                <t t-set="information_block">
+                    <strong>Shipping address:</strong>
+                    <div>
+                        <p t-field="o.notes"/>
+                    </div>
+                </t>
+            </t>
+        </xpath>
+    </template>
+
 </odoo>
 
 
