--- a/efecto_custom_factura_mx/views/efecto_compra_direccion_envio.xml
+++ b/efecto_custom_factura_mx/views/efecto_compra_direccion_envio.xml
@@ -2,28 +2,20 @@
 
 <odoo>
     <template id="efecto_compra_direccion_envio" inherit_id="purchase.report_purchaseorder_document">
-        <xpath expr="//t[@t-if='o.dest_address_id']" position="replace" >
+        <xpath expr="//div[@t-field='o.dest_address_id'" position="replace" >
             <t t-if="o.dest_address_id">
-                <t t-set="information_block">
-                    <strong>Shipping address:</strong>
                     <div>
                         <p t-field="o.notes"/>
                     </div>
-                </t>
             </t>
         </xpath>
     </template>
 
     <template id="efecto_compra_direccion_envio_stock" inherit_id="purchase_stock.report_purchaseorder_document">
-        <xpath expr="//t[@t-else='']" position="replace" >
-           <t t-else="">
-                <t t-set="information_block">
-                    <strong>Shipping address:</strong>
+        <xpath expr="//div[@t-if='o.picking_type_id and o.picking_type_id.warehouse_id']" position="replace" >
                     <div>
                         <p t-field="o.notes"/>
                     </div>
-                </t>
-            </t>
         </xpath>
     </template>
 
