--- a/efecto_custom_factura_mx/views/efecto_compra_direccion_envio.xml
+++ b/efecto_custom_factura_mx/views/efecto_compra_direccion_envio.xml
@@ -2,7 +2,7 @@
 
 <odoo>
     <template id="efecto_compra_direccion_envio" inherit_id="purchase.report_purchaseorder_document">
-        <xpath expr="//div[@t-field='o.dest_address_id'" position="replace" >
+        <xpath expr="//div[@t-field='o.dest_address_id']" position="replace" >
             <t t-if="o.dest_address_id">
                     <div>
                         <p t-field="o.notes"/>
