--- a/efecto_custom_factura_mx/views/efecto_compra_direccion_envio.xml
+++ b/efecto_custom_factura_mx/views/efecto_compra_direccion_envio.xml
@@ -2,15 +2,13 @@
 
 <odoo>
     <template id="efecto_compra_direccion_envio" inherit_id="purchase.report_purchaseorder_document">
-        <xpath expr="//div[@t-field='o.dest_address_id']" position="replace" >
-            <t t-if="o.dest_address_id">
+        <xpath expr="//div[@t-if='o.dest_address_id']" position="replace" >
                     <div>
                         <p t-field="o.notes"/>
                     </div>
-            </t>
         </xpath>
 
-        <xpath expr="//div[@class='page']/p[t-field='o.notes']" position="replace" >
+        <xpath expr="//div[@class='page']/p[@t-field='o.notes']" position="replace" >
         </xpath>
 
 
