--- a/efecto_custom_factura_mx/views/efecto_compra_direccion_envio.xml
+++ b/efecto_custom_factura_mx/views/efecto_compra_direccion_envio.xml
@@ -2,10 +2,15 @@
 
 <odoo>
     <template id="efecto_compra_direccion_envio" inherit_id="purchase.report_purchaseorder_document">
-        <xpath expr="//div[@t-if='o.dest_address_id']" position="replace" >
+          <xpath expr="//t[@t-if='o.dest_address_id']" position="replace" >
+            <t t-if="o.dest_address_id">
+                <t t-set="information_block">
+                    <strong>Dirección de Envío:</strong>
                     <div>
                         <p t-field="o.notes"/>
                     </div>
+                </t>
+            </t>
         </xpath>
 
         <xpath expr="//div[@class='page']/p[@t-field='o.notes']" position="replace" >
@@ -16,11 +21,15 @@
     </template>
 
     <template id="efecto_compra_direccion_envio_stock" inherit_id="purchase_stock.report_purchaseorder_document">
-        <xpath expr="//t[@t-set='information_block']/div[1]" position="replace" >
+        <xpath expr="//t[@t-else='']" position="replace" >
+           <t t-else="">
+                <t t-set="information_block">
+                    <strong>Dirección de Envío:</strong>
                     <div>
                         <p t-field="o.notes"/>
                     </div>
-
+                </t>
+            </t>
         </xpath>
     </template>
 
